docs(known-issues): round-5 precise-native-scan -- perf tooling fixed, partial root cause found, still not landed
See docs/known-issues/CRATONVM-SPRING-GENUINE-BUGLIST.md, Round 5 entry
under RequestMappingMessageConversionIntegrationTests. Full redesigned
implementation + live-profiling data preserved on unmerged branch
fix/precise-native-scan-20260716 (commit 145c13b4).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>